fixed: type of m_messages to Deque