@@ -1,27 +1,29 @@
 package log;
 
+import java.util.ArrayDeque;
 import java.util.ArrayList;
 import java.util.Collections;
+import java.util.Deque;
 import java.util.List;
 
 public class LogWindowSource
 {
     private final int m_iQueueLength;
 
-    private final List<LogEntry> m_messages;
+    private final Deque<LogEntry> m_messages;
     private final List<LogChangeListener> m_listeners;
     private volatile LogChangeListener[] m_activeListeners;
 
     public LogWindowSource(int iQueueLength)
     {
         this.m_iQueueLength = iQueueLength;
-        this.m_messages = new ArrayList<>(iQueueLength);
+        this.m_messages = new ArrayDeque<>(iQueueLength);
         this.m_listeners = new ArrayList<>();
     }
 
     public void registerListener(LogChangeListener listener)
     {
-        synchronized(m_listeners)
+        synchronized (m_listeners)
         {
             if (!m_listeners.contains(listener)) {
                 m_listeners.add(listener);
@@ -32,7 +34,7 @@ public class LogWindowSource
 
     public void unregisterListener(LogChangeListener listener)
     {
-        synchronized(m_listeners)
+        synchronized (m_listeners)
         {
             if (m_listeners.remove(listener)) {
                 m_activeListeners = null;
@@ -45,10 +47,10 @@ public class LogWindowSource
         LogEntry entry = new LogEntry(logLevel, strMessage);
 
         synchronized (m_messages) {
-            m_messages.add(entry);
-            while (m_messages.size() > m_iQueueLength) {
-                m_messages.remove(0);
+            if (m_messages.size() >= m_iQueueLength) {
+                m_messages.removeFirst();
             }
+            m_messages.addLast(entry);
         }
 
         LogChangeListener[] activeListeners = m_activeListeners;
@@ -63,6 +65,7 @@ public class LogWindowSource
                 }
             }
         }
+
         for (LogChangeListener listener : activeListeners)
         {
             listener.onLogChanged();
@@ -79,12 +82,10 @@ public class LogWindowSource
     public Iterable<LogEntry> range(int startFrom, int count)
     {
         synchronized (m_messages) {
-            if (startFrom < 0 || startFrom >= m_messages.size())
-            {
+            if (startFrom < 0 || startFrom >= m_messages.size()) {
                 return Collections.emptyList();
             }
-            int indexTo = Math.min(startFrom + count, m_messages.size());
-            return new ArrayList<>(m_messages.subList(startFrom, indexTo));
+            return new ArrayList<>(m_messages).subList(startFrom, Math.min(startFrom + count, m_messages.size()));
         }
     }
 
